--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.0+1
+version: 1.0.2+3
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
@@ -34,6 +34,32 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  email_validator: '^2.0.1'
+  http: ^0.13.4
+  intl: ^0.17.0
+  adaptive_dialog: ^1.1.0
+  url_launcher: ^6.0.13
+  whatsapp_unilink: ^2.0.0
+  flutter_launcher_icons: ^0.9.2
+  flutter_native_splash: ^1.3.1
+  syncfusion_flutter_calendar: ^19.3.55
+  #TODO: Descomentar
+  #camera: ^0.9.4
+  path_provider: ^2.0.5
+  path: ^1.8.0
+  connectivity: ^3.0.6
+  image_picker: ^0.8.4+2
+  shared_preferences: ^2.0.8
+  font_awesome_flutter: ^9.2.0
+
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/ic_launcher.png"
+
+flutter_native_splash:
+  image: "assets/splash.png"
+  color: "#74C574"  
 
 dev_dependencies:
   flutter_test:
@@ -58,9 +84,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+  - assets/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
